[package]
name = "landscape"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Generate continental terrain"
repository = "https://github.com/oovm/Terrain"
documentation = "https://docs.rs/continent"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
shape-core = "0.1.14"
shape-triangulation = { version = "0.1.1", features = ["rand"] }

[dev-dependencies]

[features]
default = []
