[package]
name = "terrain-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"], optional = true }
rand = { version = "0.8.4", features = ["small_rng"] }
ndarray = { version = "0.15.6" }


[dev-dependencies]

[features]
default = []
serde = ["dep:serde", "ndarray/serde"]
