[package]
name = "terrain-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"], optional = true }
rand = { version = "0.8.4", features = ["small_rng"] }
ndarray = { version = "0.15.6" }
tracing = "0.1.37"
image = { version = "0.24.6", optional = true }

[dependencies.diamond-square]
version = "0.0.*"
path = "../terrain-ds"

[dev-dependencies]

[features]
default = ["image", "serde"]
serde = ["dep:serde", "ndarray/serde"]
